
# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kdf"
description = "A Rust library and CLI for parsing and converting KDF documents."
repository = "https://github.com/sean0x42/rust-kdf"
version = "0.1.0-alpha"
authors = ["Sean Bailey <sean@seanbailey.io>"]
edition = "2018"
publish = false

[lib]
name = "kdf"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
